--- a/index.html
+++ b/index.html
@@ -57,24 +57,36 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="./img/img11.jpg" class="d-block w-100" alt="..." style="height: 100vh; object-fit-cover;">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                <img src="./img/img11.jpg" class="d-block w-100" alt="..." style="height: 100vh; object-fit:cover;"/>
+                <div class="carousel-caption text-white d-none d-md-block">
+                  <h5>1ER PUESTO</h5>
+                  <p>ALER</p>
+                  <div class="mb-2">
+                    <button type="button" class="btn btn-primary">Carreras</button>
+                    <button type="button" class="btn btn-secondary">Contacto</button>
+                  </div>
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="./img/img12.jpg" class="d-block w-100" alt="..." style="height: 100vh; object-fit-cover;>
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                <img src="./img/img12.jpg" class="d-block w-100" alt="..." style="height: 100vh; object-fit:cover;"/>
+                <div class="carousel-caption text-white d-none d-md-block">
+                  <h5>2DO PUESTO</h5>
+                  <p>CESAR VALENCIA</p>
+                  <div class="mb-2">
+                    <button type="button" class="btn btn-primary">Carreras</button>
+                    <button type="button" class="btn btn-secondary">Contacto</button>
+                  </div>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="./img/img14.jpg" class="d-block w-100" alt="..." style="height: 100vh; object-fit-cover;>
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                <img src="./img/img14.jpg" class="d-block w-100" alt="..." style="height: 100vh; object-fit:cover;"/>
+                <div class="carousel-caption text-white d-none d-md-block">
+                  <h5>3ER PUESTO</h5>
+                  <p>MAURICIO LUNA</p>
+                  <div class="mb-2">
+                    <button type="button" class="btn btn-primary">Carreras</button>
+                    <button type="button" class="btn btn-secondary">Contacto</button>
+                  </div>
                 </div>
               </div>
             </div>
