feat: add img + footer+ categorias

--- a/index.html
+++ b/index.html
@@ -7,31 +7,32 @@
     <title>Moto Cross</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="shortcut icon" href="https://th.bing.com/th/id/OIP.CVNR7uS02MHBIsQkXefo_AHaHa?pid=ImgDet&rs=1" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 
 <body>
     <header class="fixed-top ">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container">
-              <a class="navbar-brand" href="#hero">MOTOCROSS</a>
+              <a class="navbar-brand" href="#carouselExampleDark">MOTOCROSS</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                    <a class="nav-link active" aria-current="page" href="#latest">HOME</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">ABOUT</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      PAGES
+                      
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><a class="dropdown-item" href="#top">Mejores Saltos</a></li>
+                      <li><a class="dropdown-item" href="#categories">Categorias</a></li>
                       <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
@@ -49,7 +50,7 @@
           </nav> 
     </header>
     <main>
-        <section id="carouselExampleDark" class="carousel carousel-dark slide">
+        <section id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -99,6 +100,196 @@
               <span class="visually-hidden">Next</span>
             </button>
           </section>
+          <section class="py-5" id="latest">
+            <div class="container d-flex flex-column gap-4">
+            <h2 class="text-center">Proximas carreras</h2>
+            <div class="row row-cols-1 row-cols-md-2 g-4">
+              <div class="col">
+                <div class="card">
+                  <img src="./img/img15.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Selva</h5>
+                    <p class="card-text">En esta emocionante modalidad de motocross, los pilotos se adentran en la densa y exuberante selva tropical. La pista serpentea a través de la vegetación espesa, desafiando a los corredores con terrenos irregulares, raíces de árboles y obstáculos naturales. Los competidores deben navegar hábilmente entre los árboles mientras mantienen la velocidad y el equilibrio. Esta carrera exige resistencia y habilidades técnicas para conquistar la naturaleza salvaje de la selva.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <img src="./img/img16.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Desierto</h5>
+                    <p class="card-text">En esta emocionante modalidad de motocross, los pilotos se adentran en la densa y exuberante selva tropical. La pista serpentea a través de la vegetación espesa, desafiando a los corredores con terrenos irregulares, raíces de árboles y obstáculos naturales. Los competidores deben navegar hábilmente entre los árboles mientras mantienen la velocidad y el equilibrio. Esta carrera exige resistencia y habilidades técnicas para conquistar la naturaleza salvaje de la selva.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <img src="./img/img18.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Acrobacias</h5>
+                    <p class="card-text">En esta emocionante modalidad de motocross, los pilotos se adentran en la densa y exuberante selva tropical. La pista serpentea a través de la vegetación espesa, desafiando a los corredores con terrenos irregulares, raíces de árboles y obstáculos naturales. Los competidores deben navegar hábilmente entre los árboles mientras mantienen la velocidad y el equilibrio. Esta carrera exige resistencia y habilidades técnicas para conquistar la naturaleza salvaje de la selva..</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <img src="./img/img17.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Montañas</h5>
+                    <p class="card-text">Las carreras de motocross en las montañas son un desafío épico en terrenos escarpados y accidentados. Los pilotos deben sortear pendientes empinadas, rocas, arroyos y senderos estrechos a través de majestuosos paisajes de montaña. La altitud y las cambiantes condiciones climáticas pueden añadir una capa adicional de dificultad. Esta disciplina requiere una habilidad extrema de manejo de la moto, así como una resistencia física sobresaliente para superar las empinadas montañas.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            </div>
+          </section>
+          <section class="py-5 bg-body-secondary" id="top"> <!-- aqui-->
+            <div class="container d-flex flex-column gap-4">
+              <h2 class="text-center">Mejores Saltos</h2>
+              <div class="d-flex flex-column gap-3">
+                <div class="row d-flex align-items-center shadow-sm">
+                  <div class="col-md-4">
+                    <img
+                      src="./img/img6.jpg"
+                      alt="Fullmetal Alchemist" width="455" height="256" class="img-fluid object-fit-cover border rounded" />
+                  </div>
+                  <div class="col-md-8">
+                    <h3>Primer Lugar</h3>
+                    <p>
+                      Dos hermanos buscan la Piedra Filosofal para recuperar sus cuerpos tras un fallido ritual de alquimia.
+                      Exploran la moralidad y el poder.
+                    </p>
+                  </div>
+                </div>
+                <div class="row flex-md-row-reverse d-flex align-items-center shadow-sm">
+                  <div class="col-md-4">
+                    <img src="./img/img3.jpg"
+                      alt="Gintama" width="455" height="256" class="img-fluid object-fit-cover border rounded" />
+                  </div>
+                  <div class="col-md-8">
+                    <h3>Segundo Lugar</h3>
+                    <p>
+                      En una versión alternativa de Edo, Gintoki y amigos luchan contra alienígenas. Mezcla de comedia y
+                      acción.
+                    </p>
+                  </div>
+                </div>
+                <div class="row d-flex align-items-center shadow-sm">
+                  <div class="col-md-4">
+                    <img src="./img/img4.jpg"
+                      alt="Neon Genesis Evangelion" width="455" height="256"
+                      class="img-fluid object-fit-cover border rounded" />
+                  </div>
+                  <div class="col-md-8">
+                    <h3>Tercer Lugar</h3>
+                    <p>
+                      Jóvenes pilotean robots para defender la Tierra de seres misteriosos. Aborda temas psicológicos y
+                      existenciales profundos.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+          <section class="py-5" id="categories">
+            <div class="container d-flex flex-column gap-4">
+              <h2 class="text-center">Categorías</h2>
+              <div class="row row-cols-1 row-cols-md-2 g-3">
+                <div class="col">
+                  <div class="card text-bg-dark" id="shonen">
+                    <img src="./img/img19.jpg"
+                      class="card-img opacity-50" alt="Shonen">
+                    <div class="card-img-overlay">
+                      <h5 class="card-title">Mixto</h5>
+                      <p class="card-text">En esta competicion se enfrentan chicas vs chicos</p>
+                      <p class="card-text"><small>Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card text-bg-dark" id="seinen">
+                    <img src="./img/img20.jpg"
+                      class="card-img opacity-50" alt="Seinen">
+                    <div class="card-img-overlay">
+                      <h5 class="card-title">Niños</h5>
+                      <p class="card-text">En esta competicion se enfrentan niños de 7 a 14 años.</p>
+                      <p class="card-text"><small>Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card text-bg-dark" id="shoujo">
+                    <img src="./img/img21.jpg"
+                      class="card-img opacity-50" alt="Shoujo">
+                    <div class="card-img-overlay">
+                      <h5 class="card-title">Off - Road</h5>
+                      <p class="card-text">La competicion mas importante y esperada de todo el año.</p>
+                      <p class="card-text"><small>Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </main>
+        <footer class="py-4 border-top w-100">
+          <nav>
+            <div class="container">
+              <div class="row">
+                <div class="col-12 col-md">
+                  <img class="mb-2"
+                    src="https://th.bing.com/th/id/OIP.k0sNg3_-YTeBw421PfnXowHaHa?pid=ImgDet&rs=1"
+                    alt="Logo de Animes" width="64" height="64" />
+                  <small class="d-block mb-3 text-body-secondary">Moto//cross © 2023. All rights reserved. Made
+                    with ❤️ by Aler 
+                    <div>
+                      <ul>
+                        <li>
+                          <a href="https://www.youtube.com/channel/UCbWAj54t_h-p58tE20RPccQ"><i class="bi bi-youtube"></i></a>
+                        </li>
+                        <li>
+                          <a href="https://www.facebook.com/Aleexiss08/"><i class="bi bi-facebook"></i></a>
+                        </li>
+                        <li>
+                          <a href="https://www.instagram.com/earc96"><i class="bi bi-instagram"></i></a>
+                        </li>
+                      </ul>
+                    </div>
+                  </small>
+                </div>
+                <div class="col-6 col-md">
+                  <h5>Features</h5>
+                  <ul class="list-unstyled text-small">
+                    <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Cool stuff</a></li>
+                    <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Random feature</a></li>
+                    <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Team feature</a></li>
+                    <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Stuff for developers</a></li>
+                    <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Another one</a></li>
+                    <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Last time</a></li>
+                  </ul>
+                </div>
+                <div class="col-6 col-md">
+                  <h5>Resources</h5>
+                  <ul class="list-unstyled text-small">
+                    <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Resource</a></li>
+                    <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Resource name</a></li>
+                    <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Another resource</a></li>
+                    <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Final resource</a></li>
+                  </ul>
+                </div>
+                <div class="col-6 col-md">
+                  <h5>About</h5>
+                  <ul class="list-unstyled text-small">
+                    <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Team</a></li>
+                    <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Locations</a></li>
+                    <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Privacy</a></li>
+                    <li class="mb-1"><a class="link-secondary text-decoration-none" href="#">Terms</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </nav>
+        </footer>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
