--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                       <li><a class="dropdown-item" href="#top">Mejores Saltos</a></li>
                       <li><a class="dropdown-item" href="#categories">Categorias</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="#latest">Proximas carreras</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">CONTACT</a>
+                    <a class="nav-link" href="#cont">CONTACT</a>
                   </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -234,7 +234,7 @@
         </main>
         <footer class="py-4 border-top w-100">
           <nav>
-            <div class="container">
+            <div class="container" id="cont">
               <div class="row">
                 <div class="col-12 col-md">
                   <img class="mb-2"
