FEAT: DESCIPCION DE PILOTOS

--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
                   <div class="col-md-8">
                     <h3>Primer Lugar</h3>
                     <p>
-                      Dos hermanos buscan la Piedra Filosofal para recuperar sus cuerpos tras un fallido ritual de alquimia.
-                      Exploran la moralidad y el poder.
+                      Alejandro Rodríguez, conocido en el circuito como "El Relámpago", es un piloto de motocross de renombre internacional. Su estilo agresivo y su capacidad para tomar riesgos calculados lo han llevado a numerosas victorias en competencias de motocross a lo largo de su carrera. Su habilidad para mantener el equilibrio y su destreza en las curvas le han otorgado el título de uno de los competidores más destacados en el mundo del motocross. Alejandro es admirado por su dedicación y su arduo trabajo dentro y fuera de la pista.
                     </p>
                   </div>
                 </div>
@@ -169,8 +168,7 @@
                   <div class="col-md-8">
                     <h3>Segundo Lugar</h3>
                     <p>
-                      En una versión alternativa de Edo, Gintoki y amigos luchan contra alienígenas. Mezcla de comedia y
-                      acción.
+                      Miguel Gómez, apodado "El Maestro", es un veterano del motocross con una larga lista de logros en su historial. A lo largo de los años, ha demostrado una técnica impecable y una capacidad para adaptarse a diversos terrenos. Su experiencia y habilidad para leer la pista le han otorgado una ventaja competitiva en cada competición. Fuera de las carreras, Miguel es conocido por su carisma y su compromiso con la promoción del deporte entre las nuevas generaciones de pilotos.
                     </p>
                   </div>
                 </div>
@@ -183,8 +181,7 @@
                   <div class="col-md-8">
                     <h3>Tercer Lugar</h3>
                     <p>
-                      Jóvenes pilotean robots para defender la Tierra de seres misteriosos. Aborda temas psicológicos y
-                      existenciales profundos.
+                      Ricardo Morales, apodado "El Torbellino", es un joven prodigio del motocross que ha tomado el mundo por sorpresa con su talento natural. A pesar de su corta edad, Ricardo ha ganado múltiples campeonatos y ha demostrado ser un competidor formidable en el circuito. Su estilo agresivo y su capacidad para superar obstáculos técnicos lo han convertido en una sensación en el motocross. A medida que continúa acumulando éxitos, Ricardo se ha convertido en un ídolo para los aspirantes a pilotos de motocross de todo el mundo.
                     </p>
                   </div>
                 </div>
